# sql_alchemy

./: pyproject.toml  sql_app.db
sql_alchemy/: crud.py  database.py  main.py  models.py  schemas.py
sql_alchemy/routers/: articles.py  auth.py  dependencies.py  users.py
